// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > LEFT JOINs on surviving dims when some dims survive 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > applies a HAVING-style filter on the LOD metric after the join-back 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
WHERE
  ((("sales_total_customers") > (10)))
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > applies dimension filters inside the LOD CTE 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".region) IN ('EMEA')))
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".region) IN ('EMEA')))
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > builds one CTE per distinct surviving-dimension set 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  lod_2 AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      SUM("sales".total_customers) AS "sales_total_by_product"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers",
      lod_2."sales_total_by_product" AS "sales_total_by_product"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
      LEFT JOIN lod_2 ON (
        lod_base."sales_product_name" = lod_2."sales_product_name"
        OR (
          lod_base."sales_product_name" IS NULL
          AND lod_2."sales_product_name" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_total_customers" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > builds separate CTEs when metrics drop different filters 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".region) IN ('EMEA')))
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".region) IN ('EMEA')))
    GROUP BY
      1
  ),
  lod_2 AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      SUM("sales".total_customers) AS "sales_total_by_product"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers",
      lod_2."sales_total_by_product" AS "sales_total_by_product"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
      LEFT JOIN lod_2 ON (
        lod_base."sales_product_name" = lod_2."sales_product_name"
        OR (
          lod_base."sales_product_name" IS NULL
          AND lod_2."sales_product_name" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_total_customers" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > compiles a custom dimension query with no LOD metric selected 1`] = `
"SELECT
  "sales".region AS "sales_region",
  ("sales".region = 'EMEA') AS "is_emea",
  SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
FROM
  "postgres"."jaffle"."sales" AS "sales"
GROUP BY
  1,
  2
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > compiles an inert LOD metric with a custom dimension 1`] = `
"SELECT
  "sales".region AS "sales_region",
  ("sales".region = 'EMEA') AS "is_emea",
  SUM("sales".total_customers) AS "sales_total_customers"
FROM
  "postgres"."jaffle"."sales" AS "sales"
GROUP BY
  1,
  2
ORDER BY
  "sales_total_customers" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > drops both grain and filter for a selected, filtered ignored dim 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      (
        (("sales".product_name) IN ('Product A'))
        AND (("sales".region) IN ('EMEA'))
      )
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".region) IN ('EMEA')))
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > drops filters on an unfiltered grand-total CTE 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".product_name) IN ('Product A')))
    GROUP BY
      1
  ),
  lod_1 AS (
    SELECT
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      CROSS JOIN lod_1
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > drops the filter on an ignored dimension that is not selected 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    WHERE
      ((("sales".product_name) IN ('Product A')))
    GROUP BY
      1
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > grand-total CTE with CROSS JOIN when all dims are ignored 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  lod_1 AS (
    SELECT
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      CROSS JOIN lod_1
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > is inert when ignored dimension is not selected 1`] = `
"SELECT
  "sales".region AS "sales_region",
  SUM("sales".total_customers) AS "sales_total_customers"
FROM
  "postgres"."jaffle"."sales" AS "sales"
GROUP BY
  1
ORDER BY
  "sales_total_customers" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > lets a table calculation read the LOD metric outer alias 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *,
  "sales_total_customers" * 2 AS "double_total"
FROM
  metrics
ORDER BY
  "sales_total_customers" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > matches all grains of an ignored base time dimension 1`] = `
"WITH
  lod_base AS (
    SELECT
      DATE_TRUNC('MONTH', "sales".order_date) AS "sales_order_date_month",
      "sales".region AS "sales_region"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_customers_ignoring_date"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_customers_ignoring_date" AS "sales_customers_ignoring_date"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_order_date_month" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > reactivates LOD at the columnSubtotal grain when the retained dimension is ignored 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  lod_1 AS (
    SELECT
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      CROSS JOIN lod_1
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > reapplies LOD correctly at the grand-total grain (inert, no dims) 1`] = `
"SELECT
  SUM("sales".customers_purchasing) AS "sales_customers_purchasing",
  SUM("sales".total_customers) AS "sales_total_customers"
FROM
  "postgres"."jaffle"."sales" AS "sales"
LIMIT
  1"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > renders the join inside the LOD CTE on a joined explore 1`] = `
"WITH
  lod_base AS (
    SELECT
      "orders".order_id AS "orders_order_id",
      "customers".country AS "customers_country"
    FROM
      "postgres"."jaffle"."orders" AS "orders"
      LEFT OUTER JOIN "postgres"."jaffle"."customers" AS "customers" ON ("orders".customer_id) = ("customers".customer_id)
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "customers".country AS "customers_country",
      SUM("orders".amount) AS "orders_total_amount"
    FROM
      "postgres"."jaffle"."orders" AS "orders"
      LEFT OUTER JOIN "postgres"."jaffle"."customers" AS "customers" ON ("orders".customer_id) = ("customers".customer_id)
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."orders_total_amount" AS "orders_total_amount"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."customers_country" = lod_1."customers_country"
        OR (
          lod_base."customers_country" IS NULL
          AND lod_1."customers_country" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "orders_total_amount" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > rewrites derived metric refs to CTE columns 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  lod_1 AS (
    SELECT
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers",
      (
        lod_base."sales_customers_purchasing" / lod_1."sales_total_customers"
      ) * 100 AS "sales_pct_customers_purchasing"
    FROM
      lod_base
      CROSS JOIN lod_1
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_customers_purchasing" DESC
LIMIT
  500"
`;

exports[`MetricQueryBuilder snapshot: LOD queries (FORK: LOD) > sorts by the LOD metric alias with the query wrapped 1`] = `
"WITH
  lod_base AS (
    SELECT
      "sales".product_name AS "sales_product_name",
      "sales".region AS "sales_region",
      SUM("sales".customers_purchasing) AS "sales_customers_purchasing"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1,
      2
  ),
  lod_1 AS (
    SELECT
      "sales".region AS "sales_region",
      SUM("sales".total_customers) AS "sales_total_customers"
    FROM
      "postgres"."jaffle"."sales" AS "sales"
    GROUP BY
      1
  ),
  metrics AS (
    SELECT
      lod_base.*,
      lod_1."sales_total_customers" AS "sales_total_customers"
    FROM
      lod_base
      LEFT JOIN lod_1 ON (
        lod_base."sales_region" = lod_1."sales_region"
        OR (
          lod_base."sales_region" IS NULL
          AND lod_1."sales_region" IS NULL
        )
      )
  )
SELECT
  *
FROM
  metrics
ORDER BY
  "sales_total_customers" DESC
LIMIT
  500"
`;
